improved responsive design

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1435,9 +1435,8 @@ img {
 .img-responsive,
 .thumbnail a>img,
 .thumbnail>img {
-    display: block;
     max-width: 100%;
-    height: auto
+    height: 270px
 }
 
 .img-rounded {
